# CoordMCP

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  DAY2_SUMMARY.md  DAY3_SUMMARY.md  DAY4_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MANIFEST.in  Makefile  QUICK_REFERENCE.md  README.md  RELEASE_CHECKLIST.md  SECURITY.md  SYSTEM_PROMPT.md  build.bat  cleanup_data.py  opencode-config.jsonc  pyproject.toml  requirements.txt
dev_docs/: 00_START_HERE.md  CoordMCP_ARCHITECTURE_DECISIONS.md  CoordMCP_IMPLEMENTATION_GUIDE.md  CoordMCP_PROJECT_PLAN.md  CoordMCP_QUICK_REFERENCE.md  CoordMCP_VISUAL_ARCHITECTURE.md
docs/: API_REFERENCE.md  CONFIGURATION.md  DATA_MODELS.md  DATA_STRUCTURE.md  DEVELOPMENT.md  EXTENDING.md  GETTING_STARTED.md  INSTALLATION.md  POLISHING_SUMMARY.md  README.md  SCHEMA_IMPROVEMENTS.md  SETUP.md  TEST_STRUCTURE.md  TEST_VERIFICATION_REPORT.md  TROUBLESHOOTING.md
docs/DEVELOPMENT/: ARCHITECTURE.md  CODE_EXAMPLES.md  IMPLEMENTATION_GUIDE.md  QUICK_REFERENCE.md  README.md  TESTING.md
docs/INTEGRATIONS/: README.md  claude-code.md  cursor.md  opencode.md  windsurf.md
docs/adr/: 0001-record-architecture-decisions.md  0002-mcp-protocol-choice.md  0003-json-storage-backend.md  0004-rule-based-architecture.md  0005-file-locking-strategy.md
docs/contributor-guide/: architecture.md  development-setup.md  extending.md  testing.md
docs/developer-guide/: api-reference.md  cli-reference.md  data-models.md  onboarding-tools.md  resources.md
docs/developer-guide/examples/: architecture-recommendation.md  basic-workflow.md  multi-agent.md
docs/examples/: README.md  architecture-recommendation.md  basic-project-setup.md  context-switching.md  multi-agent-workflow.md
docs/reference/: configuration.md  faq.md  troubleshooting.md
docs/user-guide/: how-it-works.md  installation.md  integrations.md  what-is-coordmcp.md
docs/user-guide/integrations/: antigravity.md  claude-code.md  cursor.md  opencode.md  windsurf.md
examples/: architecture_recommendation.py  basic_project_setup.py  context_switching.py  multi_agent_workflow.py
scripts/: cleanup.py  cleanup.sh
src/coordmcp/: __init__.py  __main__.py  _version.py  config.py  events.py  logger.py  main.py  plugins.py
src/coordmcp/architecture/: __init__.py  analyzer.py  patterns.py  recommender.py  validators.py
src/coordmcp/context/: __init__.py  file_tracker.py  manager.py  state.py
src/coordmcp/core/: __init__.py  resource_manager.py  server.py  tool_manager.py
src/coordmcp/errors/: __init__.py
src/coordmcp/memory/: __init__.py  json_store.py  models.py
src/coordmcp/resources/: __init__.py  agent_resources.py  architecture_resources.py  project_resources.py
src/coordmcp/storage/: __init__.py  base.py  json_adapter.py
src/coordmcp/tools/: __init__.py  architecture_tools.py  context_tools.py  discovery_tools.py  health_tools.py  memory_tools.py  message_tools.py  onboarding_tools.py  task_tools.py
src/coordmcp/utils/: __init__.py  error_handler.py  project_resolver.py  validation.py
src/tests/: __init__.py  conftest.py  test_architecture_system.py  test_context_system.py  test_memory_system.py
src/tests/e2e/: __init__.py  conftest.py  test_multi_agent_workflows.py
src/tests/fixtures/: __init__.py
src/tests/integration/: test_full_integration.py
src/tests/performance/: conftest.py  test_performance.py
src/tests/unit/: __init__.py  conftest.py  test_architecture.py  test_context_manager.py  test_file_tracker.py  test_memory_store.py
src/tests/unit/test_architecture/: __init__.py  test_analyzer.py
src/tests/unit/test_context/: __init__.py  test_file_tracker.py  test_manager.py  test_state.py
src/tests/unit/test_core/: __init__.py
src/tests/unit/test_tools/: conftest.py  (+6 more)
src/tests/utils/: __init__.py  assertions.py  factories.py
(+9 files in other folders)
