[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "coordmcp"
dynamic = ["version"]
description = "A FastMCP-based Model Context Protocol server for intelligent multi-agent code coordination"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "CoordMCP Team"}
]
keywords = ["mcp", "fastmcp", "agents", "coordination", "coding", "multi-agent", "context-protocol"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Build Tools",
    "Typing :: Typed",
]
dependencies = [
    "fastmcp>=0.4.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/siddiquesahabaj/coordmcp"
Repository = "https://github.com/siddiquesahabaj/coordmcp"
Documentation = "https://github.com/siddiquesahabaj/coordmcp/tree/main/docs"
Changelog = "https://github.com/siddiquesahabaj/coordmcp/blob/main/CHANGELOG.md"
Issues = "https://github.com/siddiquesahabaj/coordmcp/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
coordmcp = "coordmcp.main:main"

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
testpaths = ["src/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
timeout = 60  # 60 second timeout for all tests
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: End-to-end tests",
    "performance: Performance tests",
    "slow: Slow tests",
    "timeout(seconds): Set timeout for specific tests"
]

[tool.setuptools_scm]
write_to = "src/coordmcp/_version.py"
fallback_version = "0.1.0"
